# nblane

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml
auth/: users.example.yaml
docs/: README.md  architecture.md  deploy-tencent-cloud.md  design.md  evidence.md  file-storage-evolution.md  mcp.md  product.md  profile-documents-relationship.md  profile-format.md  public-site.md  setup.md  skill-tree-schema.md  web-ui-product.md  web-ui.md
docs/zh/: README.md  architecture.md  blog-editor-usage.md  design.md  evidence.md  file-storage-evolution.md  initial-loop.md  kanban-archive.md  kanban.md  mcp.md  product.md  public-site.md  (+8 more)
pages/: 1_Skill_Tree.py  2_Gap_Analysis.py  3_Kanban.py  4_Team_View.py  5_Profile_Health.py  6_Public_Site.py
schemas/: __init__.py  ai_patch.py  blocknote_doc.py  editor_events.py  robotics-engineer.yaml
tests/: test_activity_log.py  test_ai_blog_phase3.py  test_ai_blog_phase4.py  test_auth.py  test_context_privacy.py  test_core_imports.py  test_evidence.py  test_evidence_ops.py  test_file_state.py  test_gap.py  test_growth_review.py  test_inbox.py  test_io_loaders.py  test_kanban_ai.py  test_kanban_events.py  test_kanban_io.py  test_learning_log.py  test_llm_multiturn.py  test_personal_workspace.py  test_profile_health.py  test_profile_ingest_merge.py  test_profile_io.py  test_profile_sync.py  test_public_curation.py  test_public_site.py  test_smoke.py  test_tag_taxonomy.py  test_visual_candidate_store.py  test_web_cache.py  test_web_linkify.py
(+334 files in other folders)
