[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nblane"
version = "0.2.0"
description = "Human + Agent + Team co-evolution system"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "markdown>=3.6",
    "streamlit>=1.35",
    "streamlit-crepe>=0.1.5",
    "openai>=1.30",
    "Pillow>=10",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "mcp>=1.0",
]

[project.scripts]
nblane = "nblane.cli:main"
nblane-mcp = "nblane.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nblane.public_blog_editor_component" = [
    "frontend/static/index.html",
    "frontend/static/assets/*",
]
"nblane.kanban_drag_component" = [
    "frontend/static/index.html",
]
"nblane.kanban_board_component" = [
    "frontend/static/index.html",
    "frontend/static/assets/*",
]
